--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
      </div>
   <div class="form-section">
     <label id="number-label" for="name">Number</label>
-      <input type="number" id="number" placeholder="Enter your age">
+      <input type="number" id="number" placeholder="Enter you age" min="20" max="100">
+      <select id="dropdown">
+     <input type="radio" name="first" value="first"  >
+    <input type="radio" name="first" value="second" >
+    <option value="Rida">rida</option>
+  <option value="Shu">shu</option>
+  
+        </select>
+        <select id="survey-form">
+     <input type="checkbox" name="first" value="first" checked >
+    <input type="checkbox" name="first" value="second" > </br>
+    <textarea>
+
+    </textarea>
+    <button type="submit" id="submit"></button>
+   
+  
+        </select>
+      
 </div>
          </form>
          
